--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "astro": "^4.5.9",
     "lucide": "^0.363.0",
     "tailwindcss": "^3.4.1",
+    "three": "^0.162.0",
     "typescript": "^5.4.3"
+  },
+  "devDependencies": {
+    "@types/three": "^0.162.0"
   }
 }
