--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.5.9",
     "lucide": "^0.363.0",
+    "motion": "^10.17.0",
     "tailwindcss": "^3.4.1",
     "three": "^0.162.0",
     "typescript": "^5.4.3"
