--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "astro-seo": "^0.8.3",
     "lucide": "^0.363.0",
     "motion": "^10.17.0",
+    "ninja-keys": "^1.2.2",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.4.1",
     "three": "^0.162.0",
